--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "sass": "^1.56.1",
     "vite": "^3.2.3"
   }
 }
