--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "sass": "^1.56.1",
+    "swiper": "^8.4.4",
     "vite": "^3.2.3"
   }
 }
